--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Probabilistic Feedback Control for Multi-Legged Locomotion">
+  <meta name="description" content="Probabilistic approach to feedback control enhances multi-legged locomotion on rugged landscapes">
   <meta name="keywords" content="probabilistic feedback control, multi-legged locomotion">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Probabilistic Feedback Control for Multi-Legged Locomotion</title>
+  <title>Probabilistic approach to feedback control enhances multi-legged locomotion on rugged landscapes</title>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><text x='0' y='14'>🤖</text></svg>">
 
   <!-- Google Fonts & Styles -->
@@ -16,15 +16,6 @@
   <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
-
-  <!-- Analytics (optional) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-PYVRSFMDRL');
-  </script>
 
   <!-- JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -38,26 +29,32 @@
   <!-- Navbar -->
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
+      <a class="navbar-item" href="#home">
+        Probabilistic approach to feedback control enhances multi-legged locomotion on rugged landscapes
+      </a>
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
         <span aria-hidden="true"></span><span aria-hidden="true"></span><span aria-hidden="true"></span>
       </a>
     </div>
     <div class="navbar-menu">
-      <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
-        <a class="navbar-item" href="https://YOURUSERNAME.github.io/REPO_NAME/">
-          <span class="icon"><i class="fas fa-home"></i></span>
-        </a>
+      <div class="navbar-start"></div>
+      <div class="navbar-end">
+        <a class="navbar-item" href="#home">Home</a>
+        <a class="navbar-item" href="#summary-video">Summary Video</a>
+        <a class="navbar-item" href="#abstract">Abstract</a>
+        <a class="navbar-item" href="#figures">Figures</a>
+        <a class="navbar-item" href="#bibtex">BibTeX</a>
       </div>
     </div>
   </nav>
 
   <!-- Title & Authors -->
-  <section class="hero">
+  <section id="home" class="hero">
     <div class="hero-body">
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Probabilistic Feedback Control Enhances Multi-Legged Locomotion</h1>
+            <h1 class="title is-1 publication-title">Probabilistic approach to feedback control enhances multi-legged locomotion on rugged landscapes</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block"><a href="https://scholar.google.com/citations?user=yFyLA04AAAAJ&hl=en">Juntao He</a>,</span>
               <span class="author-block"><a href="https://sites.gatech.edu/baxichong/">Baxi Chong</a>,</span>
@@ -83,6 +80,12 @@
                     <span>View on arXiv</span>
                   </a>
                 </span>
+                <span class="link-block">
+                  <a href="https://www.youtube.com/watch?v=nWu7U5xZqbo" class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon"><i class="fab fa-youtube"></i></span>
+                    <span>YouTube</span>
+                  </a>
+                </span>
               </div>
             </div>
           </div>
@@ -92,7 +95,7 @@
   </section>
 
   <!-- Summary Video -->
-  <section class="hero teaser is-light is-small">
+  <section id="summary-video" class="hero teaser is-light is-small">
     <div class="hero-body">
       <div class="container is-max-desktop">
         <div class="columns is-centered has-text-centered">
@@ -108,7 +111,7 @@
   </section>
 
   <!-- Abstract -->
-  <section class="section">
+  <section id="abstract" class="section">
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
@@ -124,60 +127,32 @@
   </section>
 
   <!-- Figures Carousel -->
-  <section class="hero is-light is-small">
+  <section id="figures" class="hero is-light is-small">
     <div class="hero-body">
       <div class="container is-max-desktop">
         <div id="figures-carousel" class="carousel results-carousel">
           <!-- Fig1 through Fig14 -->
-          <div class="item">
-            <figure><img src="./static/images/Fig1.png" alt="Fig 1"><figcaption class="has-text-centered"><strong>Fig 1:</strong> Description for Figure 1</figcaption></figure>
-          </div>
-          <div class="item">
-            <figure><img src="./static/images/Fig2.png" alt="Fig 2"><figcaption class="has-text-centered"><strong>Fig 2:</strong> Description for Figure 2</figcaption></figure>
-          </div>
-          <div class="item">
-            <figure><img src="./static/images/Fig3.png" alt="Fig 3"><figcaption class="has-text-centered"><strong>Fig 3:</strong> Description for Figure 3</figcaption></figure>
-          </div>
-          <div class="item">
-            <figure><img src="./static/images/Fig4.png" alt="Fig 4"><figcaption class="has-text-centered"><strong>Fig 4:</strong> Description for Figure 4</figcaption></figure>
-          </div>
-          <div class="item">
-            <figure><img src="./static/images/Fig5.png" alt="Fig 5"><figcaption class="has-text-centered"><strong>Fig 5:</strong> Description for Figure 5</figcaption></figure>
-          </div>
-          <div class="item">
-            <figure><img src="./static/images/Fig6.png" alt="Fig 6"><figcaption class="has-text-centered"><strong>Fig 6:</strong> Description for Figure 6</figcaption></figure>
-          </div>
-          <div class="item">
-            <figure><img src="./static/images/Fig7.png" alt="Fig 7"><figcaption class="has-text-centered"><strong>Fig 7:</strong> Description for Figure 7</figcaption></figure>
-          </div>
-          <div class="item">
-            <figure><img src="./static/images/Fig8.png" alt="Fig 8"><figcaption class="has-text-centered"><strong>Fig 8:</strong> Description for Figure 8</figcaption></figure>
-          </div>
-          <div class="item">
-            <figure><img src="./static/images/Fig9.png" alt="Fig 9"><figcaption class="has-text-centered"><strong>Fig 9:</strong> Description for Figure 9</figcaption></figure>
-          </div>
-          <div class="item">
-            <figure><img src="./static/images/Fig10.png" alt="Fig 10"><figcaption class="has-text-centered"><strong>Fig 10:</strong> Description for Figure 10</figcaption></figure>
-          </div>
-          <div class="item">
-            <figure><img src="./static/images/Fig11.png" alt="Fig 11"><figcaption class="has-text-centered"><strong>Fig 11:</strong> Description for Figure 11</figcaption></figure>
-          </div>
-          <div class="item">
-            <figure><img src="./static/images/Fig12.png" alt="Fig 12"><figcaption class="has-text-centered"><strong>Fig 12:</strong> Description for Figure 12</figcaption></figure>
-          </div>
-          <div class="item">
-            <figure><img src="./static/images/Fig13.png" alt="Fig 13"><figcaption class="has-text-centered"><strong>Fig 13:</strong> Description for Figure 13</figcaption></figure>
-          </div>
-          <div class="item">
-            <figure><img src="./static/images/Fig14.png" alt="Fig 14"><figcaption class="has-text-centered"><strong>Fig 14:</strong> Description for Figure 14</figcaption></figure>
-          </div>
+          <div class="item"><figure class="image"><img src="./static/images/Fig1.png" alt="Fig 1" style="object-fit:contain; width:100%; height:auto;"><figcaption class="has-text-centered"><strong>Fig 1:</strong> Description</figcaption></figure></div>
+          <div class="item"><figure class="image"><img src="./static/images/Fig2.png" alt="Fig 2" style="object-fit:contain; width:100%; height:auto;"><figcaption class="has-text-centered"><strong>Fig 2:</strong> Description</figcaption></figure></div>
+          <div class="item"><figure class="image"><img src="./static/images/Fig3.png" alt="Fig 3" style="object-fit:contain; width:100%; height:auto;"><figcaption class="has-text-centered"><strong>Fig 3:</strong> Description</figcaption></figure></div>
+          <div class="item"><figure class="image"><img src="./static/images/Fig4.png" alt="Fig 4" style="object-fit:contain; width:100%; height:auto;"><figcaption class="has-text-centered"><strong>Fig 4:</strong> Description</figcaption></figure></div>
+          <div class="item"><figure class="image"><img src="./static/images/Fig5.png" alt="Fig 5" style="object-fit:contain; width:100%; height:auto;"><figcaption class="has-text-centered"><strong>Fig 5:</strong> Description</figcaption></figure></div>
+          <div class="item"><figure class="image"><img src="./static/images/Fig6.png" alt="Fig 6" style="object-fit:contain; width:100%; height:auto;"><figcaption class="has-text-centered"><strong>Fig 6:</strong> Description</figcaption></figure></div>
+          <div class="item"><figure class="image"><img src="./static/images/Fig7.png" alt="Fig 7" style="object-fit:contain; width:100%; height:auto;"><figcaption class="has-text-centered"><strong>Fig 7:</strong> Description</figcaption></figure></div>
+          <div class="item"><figure class="image"><img src="./static/images/Fig8.png" alt="Fig 8" style="object-fit:contain; width:100%; height:auto;"><figcaption class="has-text-centered"><strong>Fig 8:</strong> Description</figcaption></figure></div>
+          <div class="item"><figure class="image"><img src="./static/images/Fig9.png" alt="Fig 9" style="object-fit:contain; width:100%; height:auto;"><figcaption class="has-text-centered"><strong>Fig 9:</strong> Description</figcaption></figure></div>
+          <div class="item"><figure class="image"><img src="./static/images/Fig10.png" alt="Fig 10" style="object-fit:contain; width:100%; height:auto;"><figcaption class="has-text-centered"><strong>Fig 10:</strong> Description</figcaption></figure></div>
+          <div class="item"><figure class="image"><img src="./static/images/Fig11.png" alt="Fig 11" style="object-fit:contain; width:100%; height:auto;"><figcaption class="has-text-centered"><strong>Fig 11:</strong> Description</figcaption></figure></div>
+          <div class="item"><figure class="image"><img src="./static/images/Fig12.png" alt="Fig 12" style="object-fit:contain; width:100%; height:auto;"><figcaption class="has-text-centered"><strong>Fig 12:</strong> Description</figcaption></figure></div>
+          <div class="item"><figure class="image"><img src="./static/images/Fig13.png" alt="Fig 13" style="object-fit:contain; width:100%; height:auto;"><figcaption class="has-text-centered"><strong>Fig 13:</strong> Description</figcaption></figure></div>
+          <div class="item"><figure class="image"><img src="./static/images/Fig14.png" alt="Fig 14" style="object-fit:contain; width:100%; height:auto;"><figcaption class="has-text-centered"><strong>Fig 14:</strong> Description</figcaption></figure></div>
         </div>
       </div>
     </div>
   </section>
 
   <!-- BibTeX Citation -->
-  <section class="section" id="BibTeX">
+  <section id="bibtex" class="section">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX Citation</h2>
       <pre><code>@article{he2025locomotion,
